feat: 提取所有 notebook 测试代码为独立 py 文件

--- a/notebooks/reflection_pattern.ipynb
+++ b/notebooks/reflection_pattern.ipynb
@@ -56,7 +56,7 @@
    "id": "73f4d7b7-40bf-43b9-a626-2a11d5529ac8",
    "metadata": {},
    "source": [
-    "### Groq Client and relevant imports"
+    "### DeepSeekAPI Client and relevant imports"
    ]
   },
   {
@@ -68,14 +68,14 @@
    "source": [
     "import os\n",
     "from pprint import pprint\n",
-    "from groq import Groq\n",
+    "from deepseek import DeepSeekAPI\n",
     "from dotenv import load_dotenv\n",
     "from IPython.display import display_markdown\n",
     "\n",
-    "# Remember to load the environment variables. You should have the Groq API Key in there :)\n",
+    "# Remember to load the environment variables. You should have the DeepSeekAPI API Key in there :)\n",
     "load_dotenv()\n",
     "\n",
-    "client = Groq()"
+    "client = DeepSeekAPI()"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mergesort_code = client.chat.completions.create(\n",
+    "mergesort_code = client.chat_completion(\n",
     "    messages=generation_chat_history,\n",
     "    model=\"llama3-70b-8192\"\n",
     ").choices[0].message.content\n",
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "critique = client.chat.completions.create(\n",
+    "critique = client.chat_completion(\n",
     "    messages=reflection_chat_history,\n",
     "    model=\"llama3-70b-8192\"\n",
     ").choices[0].message.content"
@@ -312,7 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "essay = client.chat.completions.create(\n",
+    "essay = client.chat_completion(\n",
     "    messages=generation_chat_history,\n",
     "    model=\"llama3-70b-8192\"\n",
     ").choices[0].message.content"
