--- a/notebooks/tool_pattern.ipynb
+++ b/notebooks/tool_pattern.ipynb
@@ -177,14 +177,14 @@
    "source": [
     "import os\n",
     "import re\n",
-    "from groq import Groq\n",
+    "from deepseek import DeepSeekAPI\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Remember to load the environment variables. You should have the Groq API Key in there :)\n",
+    "# Remember to load the environment variables. You should have the DeepSeekAPI API Key in there :)\n",
     "load_dotenv()\n",
     "\n",
-    "MODEL = \"llama-3.3-70b-versatile\"\n",
-    "GROQ_CLIENT = Groq()\n",
+    "MODEL = \"deepseek-chat\"\n",
+    "GROQ_CLIENT = DeepSeekAPI()\n",
     "\n",
     "# Define the System Prompt as a constant\n",
     "TOOL_SYSTEM_PROMPT = \"\"\"\n",
@@ -248,7 +248,7 @@
     "tool_chat_history.append(user_msg)\n",
     "agent_chat_history.append(user_msg)\n",
     "\n",
-    "output = GROQ_CLIENT.chat.completions.create(\n",
+    "output = GROQ_CLIENT.chat_completion(\n",
     "    messages=tool_chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content\n",
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROQ_CLIENT.chat.completions.create(\n",
+    "GROQ_CLIENT.chat_completion(\n",
     "    messages=agent_chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content"
