--- a/notebooks/planning_pattern.ipynb
+++ b/notebooks/planning_pattern.ipynb
@@ -36,7 +36,7 @@
    "id": "bd0dc83a-f11b-469d-bb2c-afbd91f39c5e",
    "metadata": {},
    "source": [
-    "## Relevant imports and Groq Client"
+    "## Relevant imports and DeepSeekAPI Client"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "605420e2-4bab-4d0a-90ac-7b9a95fd9976",
    "metadata": {},
    "source": [
-    "We start by importing all the libraries we'll be using in this tutorial as well as the Groq client."
+    "We start by importing all the libraries we'll be using in this tutorial as well as the DeepSeekAPI client."
    ]
   },
   {
@@ -60,17 +60,17 @@
     "import json\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from groq import Groq\n",
+    "from deepseek import DeepSeekAPI\n",
     "\n",
     "from agentic_patterns.tool_pattern.tool import tool\n",
     "from agentic_patterns.utils.extraction import extract_tag_content\n",
     "\n",
     "\n",
-    "# Remember to load the environment variables. You should have the Groq API Key in there :)\n",
+    "# Remember to load the environment variables. You should have the DeepSeekAPI API Key in there :)\n",
     "load_dotenv()\n",
     "\n",
-    "MODEL = \"llama-3.3-70b-versatile\"\n",
-    "GROQ_CLIENT = Groq()"
+    "MODEL = \"deepseek-chat\"\n",
+    "GROQ_CLIENT = DeepSeekAPI()"
    ]
   },
   {
@@ -178,10 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c1d3bec1-679d-4d80-bf41-bf54b00e985c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tool' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;129m@tool\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msum_two_elements\u001b[39m(a: \u001b[38;5;28mint\u001b[39m, b: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m      3\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    Computes the sum of two integers.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m        int: The sum of `a` and `b`.\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a \u001b[38;5;241m+\u001b[39m b\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tool' is not defined"
+     ]
+    }
+   ],
    "source": [
     "@tool\n",
     "def sum_two_elements(a: int, b: int) -> int:\n",
@@ -346,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = GROQ_CLIENT.chat.completions.create(\n",
+    "output = GROQ_CLIENT.chat_completion(\n",
     "    messages=chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content\n",
@@ -467,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = GROQ_CLIENT.chat.completions.create(\n",
+    "output = GROQ_CLIENT.chat_completion(\n",
     "    messages=chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content\n",
@@ -560,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = GROQ_CLIENT.chat.completions.create(\n",
+    "output = GROQ_CLIENT.chat_completion(\n",
     "    messages=chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content\n",
@@ -653,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = GROQ_CLIENT.chat.completions.create(\n",
+    "output = GROQ_CLIENT.chat_completion(\n",
     "    messages=chat_history,\n",
     "    model=MODEL\n",
     ").choices[0].message.content\n",
@@ -726,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
